--- a/src/index.css
+++ b/src/index.css
@@ -9,24 +9,34 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Custom Scrollbar Styles */
 @layer utilities {
-  html, body {
+
+  html,
+  body {
     scrollbar-width: thin;
     scrollbar-color: #39004a #fcfcfc;
   }
 
   /* WebKit browsers (Chrome, Safari, Edge) */
-  html::-webkit-scrollbar, body::-webkit-scrollbar {
-    width: 10px; /* Width of the scrollbar */
+  html::-webkit-scrollbar,
+  body::-webkit-scrollbar {
+    width: 10px;
+    /* Width of the scrollbar */
   }
 
-  html::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb {
+  html::-webkit-scrollbar-thumb,
+  body::-webkit-scrollbar-thumb {
     background-color: #39004a;
     border-radius: 15px;
   }
 
-  html::-webkit-scrollbar-track, body::-webkit-scrollbar-track {
+  html::-webkit-scrollbar-track,
+  body::-webkit-scrollbar-track {
     background-color: #ffffff;
   }
 }
