--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 /* Custom Selection Color */
 @layer utilities {
   ::selection {
-    @apply bg-purple-800 text-white;
+    background-color: #431568;
+    color: #ffffff; /* text-white */
   }
 }
 
@@ -13,30 +14,20 @@ html {
   scroll-behavior: smooth;
 }
 
-/* Custom Scrollbar Styles */
-@layer utilities {
+html::-webkit-scrollbar,body::-webkit-scrollbar {
+  width: 4px;
+  height: 5px;
+}
 
-  html,
-  body {
-    scrollbar-width: thin;
-    scrollbar-color: #39004a #fcfcfc;
-  }
+html::-webkit-scrollbar-thumb,body::-webkit-scrollbar-thumb {
+  background-color: #431568;
+  border-radius: 2px;
+}
 
-  /* WebKit browsers (Chrome, Safari, Edge) */
-  html::-webkit-scrollbar,
-  body::-webkit-scrollbar {
-    width: 10px;
-    /* Width of the scrollbar */
-  }
+html::-webkit-scrollbar-track, body::-webkit-scrollbar-track {
+  background-color: #d3c9e300;
+}
 
-  html::-webkit-scrollbar-thumb,
-  body::-webkit-scrollbar-thumb {
-    background-color: #39004a;
-    border-radius: 15px;
-  }
-
-  html::-webkit-scrollbar-track,
-  body::-webkit-scrollbar-track {
-    background-color: #ffffff;
-  }
+html::-webkit-scrollbar-thumb:hover, body::-webkit-scrollbar-thumb:hover {
+  background-color: #f3f5f3;
 }
